<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddItem">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/backgroundColor"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@color/backgroundColor">

        <ImageView
            android:id="@+id/arrowBackAddItem"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="7dp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="115dp"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="115dp"
            android:layout_marginRight="115dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@+id/arrowRightBack"
            app:layout_constraintStart_toEndOf="@+id/arrowBackAddItem"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/arrowRightBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>





    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/constraintLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                    
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:background="@drawable/layout_bg"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:text="@string/addProduct"
                            android:textColor="@color/textColorOnWhiteBackGround"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textSize="35sp"
                            />

                        <ImageView
                            android:id="@+id/productImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_add_photo"/>
                        <EditText
                            android:id="@+id/productCode"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="@string/itemCode"
                            android:paddingLeft="10dp"
                            android:inputType="text"
                            android:maxLength="15"
                            android:textColor="@color/textColorOnWhiteBackGround"
                            android:textColorHint="@color/textColorOnWhiteBackGround"
                            android:background="@drawable/edit_text_bg"
                            android:layout_marginTop="15dp"
                            />

                        <EditText
                            android:id="@+id/productName"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="@string/itemName"
                            android:paddingLeft="10dp"
                            android:inputType="text"
                            android:maxLength="15"
                            android:textColor="@color/textColorOnWhiteBackGround"
                            android:textColorHint="@color/textColorOnWhiteBackGround"
                            android:background="@drawable/edit_text_bg"
                            android:layout_marginTop="15dp"
                            />
                        <EditText
                            android:id="@+id/productPrice"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="@string/itemPrice"
                            android:paddingLeft="10dp"
                            android:inputType="phone"
                            android:maxLength="15"
                            android:textColor="@color/textColorOnWhiteBackGround"
                            android:textColorHint="@color/textColorOnWhiteBackGround"
                            android:background="@drawable/edit_text_bg"
                            android:layout_marginTop="15dp"
                            />



                        <Spinner
                            android:id="@+id/productCategory"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edit_text_bg"
                            />

                        <Spinner
                            android:id="@+id/productSubCategory"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/edit_text_bg"
                            />

<!--                        <Spinner-->
<!--                            android:id="@+id/productStockOROutOFStock"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="55dp"-->
<!--                            android:layout_marginTop="20dp"-->
<!--                            android:background="@drawable/edit_text_bg"-->
<!--                            />-->


                        <RadioGroup
                            android:id="@+id/radioGroupForStock"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <RadioButton
                                android:id="@+id/radioButtonInStock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/inStock"
                                android:textColor="@color/textColorOnWhiteBackGround"
                                android:textSize="18sp"
                                android:textStyle="bold"/>
                            <RadioButton
                                android:id="@+id/radioButtonOutOfStock"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/outOfStock"
                                android:layout_marginTop="5dp"
                                android:textColor="@color/textColorOnWhiteBackGround"
                                android:textSize="18sp"
                                android:textStyle="bold"/>
                        </RadioGroup>



                        <EditText
                            android:id="@+id/productDescription"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:hint="@string/itemDescription"
                            android:paddingLeft="10dp"
                            android:inputType="textMultiLine"
                            android:textColor="@color/textColorOnWhiteBackGround"
                            android:textColorHint="@color/textColorOnWhiteBackGround"
                            android:background="@drawable/edit_text_bg"
                            android:layout_marginTop="15dp"
                            android:textAlignment="center"
                            android:layout_gravity="center_horizontal" />

                        <Button
                            android:id="@+id/addProductBtn"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:text="@string/addProduct"
                            android:background="@drawable/btn_add_product"
                            android:layout_marginTop="15dp"
                            android:textColor="@color/white"/>






                    </LinearLayout>



            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
    </LinearLayout>

</RelativeLayout>

