<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:background="@color/editTextBG">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:id="@+id/adminUpdateImageView"
                android:layout_width="match_parent"
                android:layout_height="140dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Product Name: "
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/adminUpdateProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3Pice Sout "
                android:gravity="right"
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category: "
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/adminUpdateProductCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Category "
                android:gravity="right"
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sub-Category: "
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>
            <TextView
                android:id="@+id/adminUpdateProductSubCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sub Category "
                android:gravity="right"
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">


            <EditText
                android:id="@+id/adminUpdateProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:hint="@string/itemPrice"
                android:paddingLeft="10dp"
                android:inputType="phone"
                android:maxLength="15"
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textColorHint="@color/textColorOnWhiteBackGround"
                android:background="@drawable/edit_text_bg"
                android:layout_weight="2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">



            <RadioGroup
                android:id="@+id/radioGroupUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radioButtonUpdateInStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inStock"
                    android:textColor="@color/textColorOnWhiteBackGround"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <RadioButton
                    android:id="@+id/radioButtonUpdateOutOfStock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outOfStock"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/textColorOnWhiteBackGround"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            </RadioGroup>

<!--            <Spinner-->
<!--                android:id="@+id/adminUpdateProductStockOROutOFStock"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="45dp"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:outlineAmbientShadowColor="@color/textColorOnWhiteBackGround"-->
<!--                android:outlineSpotShadowColor="@color/textColorOnWhiteBackGround"-->
<!--                android:background="@drawable/edit_text_bg"-->
<!--                android:entries="@array/stockAvailability"-->
<!--                android:layout_weight="2"-->
<!--                >-->
<!--            </Spinner>-->


<!--            <EditText-->
<!--                android:id="@+id/adminUpdateProductStockOROutOFStock"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="45dp"-->
<!--                android:hint="@string/updateStock"-->
<!--                android:paddingLeft="10dp"-->
<!--                android:inputType="text"-->
<!--                android:maxLength="15"-->
<!--                android:textColor="@color/textColorOnWhiteBackGround"-->
<!--                android:textColorHint="@color/textColorOnWhiteBackGround"-->
<!--                android:background="@drawable/edit_text_bg"-->
<!--                android:layout_weight="2"-->
<!--                />-->



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/adminUpdateProductDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/itemDescription"
                android:paddingLeft="10dp"
                android:inputType="textMultiLine"
                android:textColor="@color/textColorOnWhiteBackGround"
                android:textColorHint="@color/textColorOnWhiteBackGround"
                android:background="@drawable/edit_text_bg"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/updateProductBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/addProduct"
            android:background="@drawable/btn_add_product"
            android:textColor="@color/white"/>
    </LinearLayout>


    </LinearLayout>
</ScrollView>

</RelativeLayout>